--- a/.github/workflows/Gitlabci.yml
+++ b/.github/workflows/Gitlabci.yml
@@ -8,19 +8,21 @@ on:
       - '/ProjectSettings/**'
   workflow_dispatch: {}
 
-stages:
-  - build
-  - publish
+#stages:
+#  - build
+#  - publish
 
 #variables:
 
 
 buildLinux64:
-  stage: build
+#  stage: build
   runs-on: ubuntu-latest
   steps:
-    - uses: actions/checkout@v3
-    - uses: game-ci/unity-builder@v2
+    - name: Checkout Repository
+      uses: actions/checkout@v3
+    - name: Build project
+      uses: game-ci/unity-builder@v2
       env:
         UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
         UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
