changed workflow file

--- a/.github/workflows/Gitlabci.yml
+++ b/.github/workflows/Gitlabci.yml
@@ -2,10 +2,12 @@ name: buildAllPlaforms
 
 on:
   push:
+    branches:  
+      - main
     paths:
-      - '/Assets/**'
-      - '/Packages/**'
-      - '/ProjectSettings/**'
+      - 'Assets/**'
+      - 'Packages/**'
+      - 'ProjectSettings/**'
   workflow_dispatch: {}
 
 #stages:
