--- a/.github/workflows/Gitlabci.yml
+++ b/.github/workflows/Gitlabci.yml
@@ -1,4 +1,4 @@
-name: buildAllPlaforms
+name: buildAllPlatforms
 
 on:
   push:
@@ -19,7 +19,7 @@ on:
 jobs:
   buildLinux64:
   #  stage: build
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -31,9 +31,9 @@ jobs:
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           targetPlatform: StandaloneLinux64
-          unityVersion: 2022.3.1f1
-          buildName: anywherelinux64
-      - uses: actions/upload-artifact@v3
+#          unityVersion: 2022.3.1f1
+#          buildName: anywherelinux64
+      - uses: actions/upload-artifact@v2
         with:
           name: StandaloneLinux64
           path: build/StandaloneLinux64
