--- a/.github/workflows/Gitlabci.yml
+++ b/.github/workflows/Gitlabci.yml
@@ -30,7 +30,7 @@ jobs:
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
-          targetPlatform: StandaloneLinux64
+          targetPlatform: StandaloneWindows64
 #          unityVersion: 2022.3.1f1
 #          buildName: anywherelinux64
       - uses: actions/upload-artifact@v2
