--- a/.github/workflows/Gitlabci.yml
+++ b/.github/workflows/Gitlabci.yml
@@ -23,8 +23,12 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-      - name: Build project
-        uses: game-ci/unity-builder@v2
+      - name: Load Cache
+        uses: actions/cache@v3
+        with:
+          path: Library
+      - name: Unity - Builder
+        uses: game-ci/unity-builder@v3.1.0
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
